--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,10 @@
+// ! reset
+a,
+p {
+  margin: 0;
+  padding: 0;
+}
+
 // ! NAVBAR
 
 .navbar {
@@ -28,6 +35,56 @@
       text-decoration: none;
       color: black;
       font-size: 1.1rem;
+    }
+  }
+}
+.content {
+  max-width: 90%;
+  margin: 0 auto;
+  .main-section {
+    display: grid;
+    grid-template-columns: 1fr 6fr;
+    * {
+      font-size: 1.3rem;
+    }
+    .sidebar {
+      display: flex;
+      flex-direction: column;
+    }
+    .details {
+      .column-names {
+        display: grid;
+        grid-template-columns: 1fr 1.5fr 1fr 1fr 0.5fr;
+
+        padding: 5px 10px;
+      }
+      .card {
+        display: grid;
+        grid-template-columns: 1fr 1.5fr 1fr 1fr 0.5fr;
+        align-items: center;
+        margin: 5px 0;
+        padding: 15px 10px;
+        border: 1px solid black;
+        .date {
+          display: flex;
+          flex-direction: column;
+        }
+      }
+    }
+    .details-product {
+      .column-names {
+        display: grid;
+        grid-template-columns: 1fr 3fr 3fr 1fr 1fr 1fr;
+
+        padding: 5px 10px;
+      }
+      .card {
+        display: grid;
+        grid-template-columns: 1fr 3fr 3fr 1fr 1fr 1fr;
+        margin: 5px 0;
+        padding: 15px 10px;
+        border: 1px solid black;
+      }
     }
   }
 }
