--- a/styles/main.css
+++ b/styles/main.css
@@ -205,7 +205,8 @@ body,form,input,option,select,textarea{
 .UserList_PageWrapper__11jYV{
   width:100%;
   box-sizing:border-box;
-  padding:0 8% 4%
+  padding:0 8% 4%;
+  margin-top:6.5rem;
 }
 
 .UserList_MainHeading__1Ntqz{
